--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,6 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+axum = { version = "0.8.3", features = ["ws"] }
+tokio = {version = "1.44.2", features = ["rt-multi-thread"] }
+futures = "0.3.31"
