--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,6 @@ edition = "2024"
 axum = { version = "0.8.3", features = ["ws"] }
 tokio = {version = "1.44.2", features = ["rt-multi-thread"] }
 futures = "0.3.31"
+rand = "0.9.0"
+serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.140"
