--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ futures = "0.3.31"
 rand = "0.9.0"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
+tower-http = { version = "0.6.2", features = ["cors"] }
