--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ rand = "0.9.0"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 tower-http = { version = "0.6.2", features = ["cors"] }
+shuttle-runtime = "0.53.0"
+shuttle-axum = "0.53.0"
